test/tests/operators/write_feather/invalid_compression.txt
error: Invalid: Unrecognized compression type: wrongname
  --> tests/operators/write_feather/invalid_compression.tql:10:54
   |
10 | write_feather compression_level=-1, compression_type="wrongname"
   |                                                      ^^^^^^^^^^^ 
   |
   = note: failed to parse compression type
   = note: must be `uncompressed`, `lz4`, or `zstd`
